ncc/testsuite/negative/macroarg.n
// REFERENCE: macroarg-lib.dll

//TODO: do we want an error here?

_ = f (x = 1); //E: named parameters given but formals' names cannot be inferred
